--- a/say_no_to_drugs.html
+++ b/say_no_to_drugs.html
@@ -64,7 +64,7 @@
         <img src="/Join Us.png" alt="Join Us" class="join-img" />
         <p>Email: <a href="mailto:hopeforthefuture@gmail.com">hopeforthefuture@gmail.com</a></p>
         <p>Phone: +234 706 7331 744</p>
-        <p>Instagram: <a href="#">@hopeforthefuture</a></p>
+        <p>Instagram: <a href="hopeforthefuture">@hopeforthefuture</a></p>
         <p>Twitter: <a href="https://twitter.com/hopeforthefuture" target="_blank">@hopeforthefuture</a></p>
         <p><strong>Join us in building a drug-free future!</strong></p>
 
